# self-computing-universe-proof

./: .gitignore  Cargo.toml  FOUNDATION.md  FRC_KERNEL.md  FRC_OPEN_PROBLEMS.md  README.md
agi-proof/: Cargo.toml  EXECUTION.md  PLAN.md
agi-proof/src/: compiler_ext.rs  domain_judge.rs  eval_specs.rs  lib.rs  phase_criteria.rs  receipt_bundle.rs  release.rs  runner.rs  suite_gen.rs
agi-proof/src/phase2/: alien_chem.rs  custom_math.rs  mod.rs  synth_physics.rs  world_gen.rs
agi-proof/src/phase3/: bio_med.rs  company.rs  mod.rs  plan_tracker.rs
agi-proof/src/phase4/: transfer.rs
agi-proof/src/phase5/: acquisition.rs  calibration.rs  mod.rs
agi-proof/src/phase6/: causal_dag.rs  counterfactual.rs  mod.rs
agi-proof/src/phase7/: algo_discovery.rs  materials.rs  mod.rs  model_discovery.rs
agi-proof/src/phase8/: mod.rs  physics_common.rs  planning.rs  social.rs
docs/: DOMAIN_GUIDE.md
docs/humans/: overview.md  whats_significant.md
experiments/subset-sum/: Cargo.toml
experiments/subset-sum/src/: dp.rs  encoding.rs  main.rs  obs_demo.rs  structure_speedup.rs
gaps/: gap_001.json  gap_002.json  gap_003.json  gap_004.json  gap_005.json  gap_006.json
kernel-bench/: Cargo.toml
kernel-bench/src/: caches.rs  dominate.rs  harness.rs  improvement.rs  judge.rs  lib.rs  suites.rs
kernel-cap/: Cargo.toml
kernel-cap/src/: artifact.rs  capability.rs  jm.rs  lib.rs
kernel-cli/: Cargo.toml
kernel-cli/src/: main.rs
kernel-contracts/: Cargo.toml
kernel-contracts/src/: alphabet.rs  compiler.rs  contract.rs  lib.rs  quotient.rs
kernel-frc/: Cargo.toml
kernel-frc/src/: asm.rs  class_c.rs  contract_frc.rs  frc_search.rs  frc_types.rs  gap_ledger.rs  lib.rs  millennium_frc.rs  motif_library.rs  open_problems.rs  opp.rs  opp_verify.rs  predicate.rs  program_builder.rs  schema.rs  schema_induction.rs  vm.rs
kernel-frc/src/invsyn/: ast.rs  eval.rs  mod.rs  normalize.rs  proof_gen.rs  search.rs  structural.rs  structural_cert.rs
kernel-frc/src/invsyn/layers/: algebraic.rs  lia.rs  mod.rs  polynomial.rs
kernel-frc/src/irc/: invariant_grammar.rs  mod.rs  obligation_gen.rs  obligation_solver.rs  problem_invariants.rs  transition_system.rs
kernel-frc/src/proof_enum/: PLAN.md  accelerator.rs  candidate.rs  checker.rs  core_term.rs  decide.rs  elab.rs  engine.rs  extract.rs  generator.rs  ledger.rs  mining.rs  mod.rs  mu_selector.rs  pi_normalizer.rs  projector.rs  reduce.rs  rewrite.rs  solve.rs  statement.rs  type_check.rs  universe.rs  witness.rs
kernel-frc/src/schemas/: algebraic_decision.rs  bounded_counterexample.rs  certified_numerics.rs  effective_compactness.rs  finite_search.rs  mod.rs  proof_mining.rs
kernel-frc/src/sec/: mod.rs  prefix_ban.rs  rule_db.rs  rule_enum.rs  rule_lean_gen.rs  rule_syn.rs  sec_engine.rs
kernel-frc/src/ucert/: cert.rs  check.rs  compile.rs  enumerate.rs  mod.rs  normalize.rs  optimize.rs  universe.rs
kernel-frc/tests/: integration_tests.rs
kernel-goldmaster/: Cargo.toml
kernel-goldmaster/src/: build_hash.rs  dominance.rs  expansion.rs  lib.rs  millennium.rs  space_engine.rs  suite.rs
kernel-instruments/: Cargo.toml
kernel-instruments/src/: base.rs  budget.rs  enumerator.rs  instrument.rs  lib.rs  state.rs
kernel-lean/: Cargo.toml
kernel-lean/src/: bundle_gen.rs  irc_gen.rs  irc_result_gen.rs  lean_runner.rs  lib.rs  manifest_gen.rs  program_embed.rs  proof_eq_gen.rs  proof_total_gen.rs  result_gen.rs
kernel-ledger/: Cargo.toml
kernel-ledger/src/: event.rs  ledger.rs  lib.rs
kernel-self/: Cargo.toml
kernel-self/src/: consciousness.rs  lib.rs  recognition.rs  self_instrument.rs  self_model.rs  tension.rs  trace.rs
kernel-solver/: Cargo.toml
kernel-solver/src/: completion.rs  evaluator.rs  lib.rs  solver.rs  stepper.rs  toe.rs
kernel-spaceengine/: Cargo.toml
kernel-spaceengine/src/: atlas_builder.rs  atlas_types.rs  catalog.rs  enhanced_emitter.rs  exo_catalog.rs  exo_normalizer.rs  exo_scenario.rs  exo_types.rs  exo_verifier.rs  lib.rs  manifest.rs  pak.rs  scenario.rs  types.rs  verifier.rs  witness_encoder.rs  witness_types.rs
kernel-types/: Cargo.toml
kernel-types/src/: hash.rs  lib.rs  provenance.rs  reason.rs  receipt.rs  serpi.rs  status.rs  tension.rs
kernel-web/: Cargo.toml
kernel-web/src/: lib.rs  policy.rs  selector.rs  web_instrument.rs
lean/: Frontier.lean  Generated.lean  Goldbach_proved.md  KernelVm.lean  O.toml  OpenProblems.lean  ProofEnum.lean  Universe.lean  lake-manifest.json  lakefile.lean
lean/Frontier/BSDFull/: Invariant.lean  MissingLemma.lean
lean/Frontier/Hodge/: Invariant.lean  MissingLemma.lean
lean/Frontier/NavierStokes/: Invariant.lean  MissingLemma.lean
lean/Frontier/PvsNP/: Invariant.lean  MissingLemma.lean
lean/Frontier/RiemannFull/: Invariant.lean  MissingLemma.lean
lean/Frontier/YangMills/: Invariant.lean  MissingLemma.lean
lean/KernelVm/: Deciders.lean  Determinism.lean  Instruction.lean  InvSyn.lean  Invariant.lean  Layers.lean  Run.lean  Soundness.lean  State.lean  Step.lean  Totality.lean  Trace.lean  UCert.lean
lean/KernelVm/Layers/: Algebraic.lean  Analytic.lean  LIA.lean  Polynomial.lean
lean/KernelVm/SEC/: RuleDB.lean  RuleSyn.lean
lean/KernelVm/UCert/: Cert.lean  Check.lean  CheckSound.lean  Completeness.lean  NF.lean  Universe.lean
lean/OpenProblems/BSD/: Invariant.lean  Statement.lean
lean/OpenProblems/Bertrand/: Invariant.lean  Statement.lean
lean/OpenProblems/Collatz/: Invariant.lean  Statement.lean
lean/OpenProblems/ErdosStraus/: Invariant.lean  Statement.lean
lean/OpenProblems/FLT/: Invariant.lean  Statement.lean
lean/OpenProblems/Goldbach/: CertUniv.lean  Invariant.lean  Proof.lean  Statement.lean
lean/ProofEnum/: Registry.lean
lean/Universe/: CheckSound.lean  DecidedProp.lean  OpenProblems.lean  PiMinimality.lean  SelfEval.lean  Solved.lean  StructCert.lean
visualization/: exo_viz.json  export_exo.py  index.html  real-universe.html  viz_universe.json
(+16 files in other folders)
