[workspace]
resolver = "2"
members = [
    "kernel-types",
    "kernel-ledger",
    "kernel-instruments",
    "kernel-contracts",
    "kernel-solver",
    "kernel-self",
    "kernel-cap",
    "kernel-goldmaster",
    "kernel-web",
    "kernel-bench",
    "kernel-spaceengine",
    "kernel-frc",
    "kernel-cli",
    "agi-proof",
]

[workspace.dependencies]
blake3 = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
