[package]
name = "kernel-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel-types = { path = "../kernel-types" }
kernel-ledger = { path = "../kernel-ledger" }
kernel-instruments = { path = "../kernel-instruments" }
kernel-contracts = { path = "../kernel-contracts" }
kernel-solver = { path = "../kernel-solver" }
kernel-self = { path = "../kernel-self" }
kernel-cap = { path = "../kernel-cap" }
kernel-goldmaster = { path = "../kernel-goldmaster" }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
