[package]
name = "kernel-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
kernel-types = { path = "../kernel-types" }
kernel-ledger = { path = "../kernel-ledger" }
kernel-instruments = { path = "../kernel-instruments" }
kernel-contracts = { path = "../kernel-contracts" }
kernel-solver = { path = "../kernel-solver" }
kernel-self = { path = "../kernel-self" }
kernel-cap = { path = "../kernel-cap" }
kernel-goldmaster = { path = "../kernel-goldmaster" }
kernel-web = { path = "../kernel-web" }
kernel-spaceengine = { path = "../kernel-spaceengine" }
kernel-bench = { path = "../kernel-bench" }
kernel-frc = { path = "../kernel-frc" }
kernel-lean = { path = "../kernel-lean" }
agi-proof = { path = "../agi-proof" }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
